--- a/DataGridViewCustomizer/DataGridViewCustomizer.csproj
+++ b/DataGridViewCustomizer/DataGridViewCustomizer.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomButtonWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomButtonWindow.Designer.cs">
+      <DependentUpon>CustomButtonWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="GridViewCustomizerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +65,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleModel.cs" />
+    <EmbeddedResource Include="CustomButtonWindow.resx">
+      <DependentUpon>CustomButtonWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GridViewCustomizerForm.resx">
       <DependentUpon>GridViewCustomizerForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,6 +96,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_grid.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AroniumButton\AroniumButton.csproj">
+      <Project>{d0267562-f199-4404-ba68-f31f767401ca}</Project>
+      <Name>AroniumButton</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
